dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-server
  labels:
    app: auth-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api-server
  template:
    metadata:
      labels:
        app: auth-api-server
    spec:
      imagePullSecrets:
        - name: facegram-registery
      containers:
        - name: auth-api-server
          image: ""
          ports:
            - containerPort: 8080
            - containerPort: 30004
            - containerPort: 30005
            - containerPort: 30006
            - containerPort: 30007
